--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-/* Need a CLEAR CSS ?
+/* CSS Reset 
 ============================ 
 
 html5doctor.com Reset Stylesheet
@@ -6,7 +6,7 @@ v1.6.1
 Last Updated: 2010-09-17
 Author: Richard Clark - http://richclarkdesign.com 
 Twitter: @rich_clark
-
+*/
 
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -100,4 +100,3 @@ input, select {
     vertical-align:middle;
 }
 
-*/
