--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Baloo+Bhaina|Open+Sans");
+/* line 3, ../sass/style.scss */
 *, *::before, *::after {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 }
 
+/* line 14, ../sass/style.scss */
 body {
   background: #167895;
 }
 
+/* line 18, ../sass/style.scss */
 .container {
   width: 500px;
   margin: 1rem auto;
   position: relative;
   padding: 1rem;
-  background: -webkit-linear-gradient(top, #FFE949 0%, #ffe630 100%);
   background: linear-gradient(to bottom, #FFE949 0%, #ffe630 100%);
   border-radius: 15px;
   border-top: 5px solid #FF5454;
@@ -24,10 +26,12 @@ body {
 }
 
 @media (max-width: 550px) {
+  /* line 33, ../sass/style.scss */
   .container {
     width: 95%;
   }
 }
+/* line 38, ../sass/style.scss */
 h1 {
   font-family: 'Baloo Bhaina', cursive;
   font-size: 30px;
@@ -37,10 +41,12 @@ h1 {
   text-shadow: 0px 0px 4px #fff;
 }
 
+/* line 47, ../sass/style.scss */
 .add-to-do {
   position: relative;
 }
 
+/* line 51, ../sass/style.scss */
 .add-to-do input {
   width: calc(100% - 35px);
   height: 35px;
@@ -49,14 +55,15 @@ h1 {
   background: #8ad6ee;
   border: 3px solid #288d86;
   box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.9);
-  -webkit-transition: .25s;
   transition: .25s;
 }
 
+/* line 62, ../sass/style.scss */
 .add-to-do .frame-input {
   border: 5px solid #FF5454;
 }
 
+/* line 66, ../sass/style.scss */
 .add-to-do .add-btn {
   position: absolute;
   width: 30px;
@@ -65,6 +72,7 @@ h1 {
   right: 0rem;
   cursor: pointer;
 }
+/* line 74, ../sass/style.scss */
 .add-to-do .add-btn::after {
   content: "";
   width: 20%;
@@ -73,9 +81,9 @@ h1 {
   background: black;
   left: 40%;
   border-radius: 5px;
-  -webkit-transition: .25s;
   transition: .25s;
 }
+/* line 84, ../sass/style.scss */
 .add-to-do .add-btn::before {
   content: "";
   width: 100%;
@@ -84,18 +92,20 @@ h1 {
   background: black;
   top: 40%;
   border-radius: 5px;
-  -webkit-transition: .25s;
   transition: .25s;
 }
 
+/* line 97, ../sass/style.scss */
 .add-to-do .stop::before, .add-to-do .stop::after {
   background: #FF5454;
 }
 
+/* line 103, ../sass/style.scss */
 .add-to-do .go::before, .add-to-do .go::after {
   background: #288d86;
 }
 
+/* line 108, ../sass/style.scss */
 .spin {
   -webkit-animation: spin .5s;
           animation: spin .5s;
@@ -122,6 +132,7 @@ h1 {
             transform: rotate(360deg);
   }
 }
+/* line 121, ../sass/style.scss */
 .to-do-list {
   background: #FF5454;
   padding: .5rem;
@@ -129,10 +140,10 @@ h1 {
   overflow: hidden;
   border-radius: 10px;
   box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.9);
-  -webkit-transition: .5s;
   transition: .5s;
 }
 
+/* line 131, ../sass/style.scss */
 .to-do {
   position: relative;
   max-height: 0px;
@@ -166,6 +177,7 @@ h1 {
     opacity: 1;
   }
 }
+/* line 151, ../sass/style.scss */
 .shrink {
   -webkit-animation: shrink .5s forwards;
           animation: shrink .5s forwards;
@@ -196,6 +208,7 @@ h1 {
     opacity: 0;
   }
 }
+/* line 169, ../sass/style.scss */
 .to-do-text {
   padding: 1rem;
   padding-right: calc(30px + 1rem);
@@ -225,6 +238,7 @@ h1 {
     opacity: 1;
   }
 }
+/* line 239, ../sass/style.scss */
 .fade-out {
   -webkit-animation: fade-out .5s forwards;
           animation: fade-out .5s forwards;
@@ -247,6 +261,7 @@ h1 {
     opacity: 0;
   }
 }
+/* line 252, ../sass/style.scss */
 .checked-button {
   width: 30px;
   height: 30px;
@@ -257,9 +272,9 @@ h1 {
   z-index: 3;
   right: 30px;
   cursor: pointer;
-  -webkit-transition: .5s;
   transition: .5s;
 }
+/* line 264, ../sass/style.scss */
 .checked-button::before {
   content: "";
   border: 5px solid #FF5454;
@@ -267,10 +282,10 @@ h1 {
   height: 30px;
   position: absolute;
   top: 0px;
-  -webkit-transition: .25s;
   transition: .25s;
 }
 
+/* line 276, ../sass/style.scss */
 .checked-button:hover::before {
   border: 0px solid #FF5454;
   border-right: 5px solid #33b5ac;
@@ -281,6 +296,7 @@ h1 {
   right: 10px;
 }
 
+/* line 287, ../sass/style.scss */
 .checked-button:active::before {
   border: 0px solid #FF5454;
   border-right: 7px solid #76d8d1;
